Fix the styling issue that training & support btn is not visible

--- a/style.v1.02.css
+++ b/style.v1.02.css
@@ -215,6 +215,7 @@ nav,div::-webkit-scrollbar-track {
 
 .left-nav-bottom {
     width: 100%;
+    padding-top: 7px;
 }
 
 .logout-link {
